fix: increase heading font sizes on mobile

--- a/src/assets/sass/layout/_contact.scss
+++ b/src/assets/sass/layout/_contact.scss
@@ -146,7 +146,7 @@
 
   p, a {
     color: $clr-neutral-100;
-    font-size: $fs-fluid-400;
+    font-size: $fs-fluid-450;
     font-weight: $fw-extra-bold;
   }
 
